name:                crdt
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/crdt#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CRDT.IncrementOnlyCounter
                     , CRDT.IncrementOnlyCounter.Experiment
                     , CRDT.GrowOnlySet
                     , CRDT.GrowOnlySet.Experiment
                     , CRDT.PNCounter
                     , CRDT.PNCounter.Experiment
                     , CRDT.TwoPSet
                     , CRDT.TwoPSet.Experiment
                     , CRDT.AntiEntropy
  build-depends:       base >= 4.7 && < 5
                     , lattices
                     , containers
                     , vector
                     , mtl
                     , MonadRandom
  default-language:    Haskell2010

executable crdt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , crdt
                     , network
                     , managed
                     , async
  default-language:    Haskell2010

test-suite crdt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , crdt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/crdt
